// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Usage without html-webpack-plugin should process the first html asset 1`] = `
"
      h1 {
        color: green;
      }
    "
`;

exports[`Usage without html-webpack-plugin should process the first html asset 2`] = `
"<!DOCTYPE html>
<html data-critters-container>
  <head>
    <title>Basic Demo</title>
    
    <style id=\\"used\\">
      h1 {
        color: green;
      }
    </style>
  </head>
  <body>
    <h1>Some HTML Here</h1>
  </body>
</html>
"
`;

exports[`webpack compilation 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>Basic Demo</title>
    <style id=\\"unused\\">
      .navbar {
        padding: 0;
        margin: 0;
      }
    </style>
    <style id=\\"used\\">
      h1 {
        color: green;
      }
    </style>
  </head>
  <body>
    <h1>Some HTML Here</h1>
  </body>
</html>
"
`;
